; ModuleID = '/home/carl/AnghaBench/libuv/test/extr_run-tests.c_main.c'
source_filename = "/home/carl/AnghaBench/libuv/test/extr_run-tests.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@EXIT_FAILURE = common dso_local global i32 0, align 4
@stderr = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [21 x i8] c"Too many arguments.\0A\00", align 1
@EXIT_SUCCESS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8**, align 8
  store i32 0, i32* %3, align 4
  store i32 %0, i32* %4, align 4
  store i8** %1, i8*** %5, align 8
  %6 = load i32, i32* %4, align 4
  %7 = load i8**, i8*** %5, align 8
  %8 = call i64 @platform_init(i32 %6, i8** %7)
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %12

10:                                               ; preds = %2
  %11 = load i32, i32* @EXIT_FAILURE, align 4
  store i32 %11, i32* %3, align 4
  br label %41

12:                                               ; preds = %2
  %13 = load i32, i32* %4, align 4
  %14 = load i8**, i8*** %5, align 8
  %15 = call i8** @uv_setup_args(i32 %13, i8** %14)
  store i8** %15, i8*** %5, align 8
  %16 = load i32, i32* %4, align 4
  switch i32 %16, label %35 [
    i32 1, label %17
    i32 2, label %19
    i32 3, label %23
    i32 4, label %31
  ]

17:                                               ; preds = %12
  %18 = call i32 @run_tests(i32 0)
  store i32 %18, i32* %3, align 4
  br label %41

19:                                               ; preds = %12
  %20 = load i32, i32* %4, align 4
  %21 = load i8**, i8*** %5, align 8
  %22 = call i32 @maybe_run_test(i32 %20, i8** %21)
  store i32 %22, i32* %3, align 4
  br label %41

23:                                               ; preds = %12
  %24 = load i8**, i8*** %5, align 8
  %25 = getelementptr inbounds i8*, i8** %24, i64 1
  %26 = load i8*, i8** %25, align 8
  %27 = load i8**, i8*** %5, align 8
  %28 = getelementptr inbounds i8*, i8** %27, i64 2
  %29 = load i8*, i8** %28, align 8
  %30 = call i32 @run_test_part(i8* %26, i8* %29)
  store i32 %30, i32* %3, align 4
  br label %41

31:                                               ; preds = %12
  %32 = load i32, i32* %4, align 4
  %33 = load i8**, i8*** %5, align 8
  %34 = call i32 @maybe_run_test(i32 %32, i8** %33)
  store i32 %34, i32* %3, align 4
  br label %41

35:                                               ; preds = %12
  %36 = load i32, i32* @stderr, align 4
  %37 = call i32 @fprintf(i32 %36, i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str, i64 0, i64 0))
  %38 = load i32, i32* @stderr, align 4
  %39 = call i32 @fflush(i32 %38)
  %40 = load i32, i32* @EXIT_FAILURE, align 4
  store i32 %40, i32* %3, align 4
  br label %41

41:                                               ; preds = %35, %31, %23, %19, %17, %10
  %42 = load i32, i32* %3, align 4
  ret i32 %42
}

declare dso_local i64 @platform_init(i32, i8**) #1

declare dso_local i8** @uv_setup_args(i32, i8**) #1

declare dso_local i32 @run_tests(i32) #1

declare dso_local i32 @maybe_run_test(i32, i8**) #1

declare dso_local i32 @run_test_part(i8*, i8*) #1

declare dso_local i32 @fprintf(i32, i8*) #1

declare dso_local i32 @fflush(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
